anton office refactoring

--- a/php/blocks/forms/callback.phtml
+++ b/php/blocks/forms/callback.phtml
@@ -1,4 +1,4 @@
-<form class="inputs" action="" style="font-size: 1.2rem;">
+<form class="inputs" action="">
     <div class="inputs__row">
     <div class="inputs__field-wrap">
         <input class="inputs__field" type="text" name="data[new][name]" required="" minlength="2">
@@ -11,7 +11,7 @@
     </div>
     <div class="inputs__row">
     <div class="inputs__field-wrap">
-        <input class="btn btn--black" type="submit" value="Отправить заявку" style="padding: 0 2rem;">
+        <input class="btn btn--black" type="submit" value="Отправить заявку">
         <input type="hidden" name="system_form_id" value="192">
         <input type="hidden" name="system_email_to" value="959">
     </div>
