--- a/php/blocks/forms/helpForm.phtml
+++ b/php/blocks/forms/helpForm.phtml
@@ -3,7 +3,7 @@
     <div class="contact__wrap">
       <div class="contact__form">
         <div class="contact__title">Получите помощь специалиста</div>
-        <form class="inputs" action="" style="font-size: 1.2rem;">
+        <form class="inputs" action="">
           <div class="inputs__row">
             <div class="inputs__field-wrap">
               <input class="inputs__field" type="text" name="data[new][name]" required="" minlength="2">
