--- a/php/blocks/tabs/delivery.phtml
+++ b/php/blocks/tabs/delivery.phtml
@@ -1,4 +1,4 @@
-<div class="article" style="margin:0">
+<div class="article">
 <p>Узнать стоимость Вы можете позвонив по телефону  +7 (812) 716-77-11 (с 9:00 до 20:00).</p>
 <h4>Способы доставки</h4>
 <ul>
