--- a/php/blocks/tabs/desc.phtml
+++ b/php/blocks/tabs/desc.phtml
@@ -2,7 +2,7 @@
 $page = $variables['page'];
 $fabrikaId = $page->getValue('fabrika');
 ?>
-<div class="article" style="margin:0">
+<div class="article">
 <?=$page->getValue('content')?>
 </div>
 
@@ -54,13 +54,13 @@ $fabrikaId = $page->getValue('fabrika');
     
 		<div class="tab-content">				
       <div id="newItems" class="tab-pane fade in active">
-        <div class="article" style="margin:0;">
+        <div class="article">
           <h4>FIBERGLASS POOL</h4>
           <p>Базовый вариант исполнения. Cмесь полиэфирной смолы, армирующих материалов и барьерный винилэфирный слой. Отличный состав по своим свойствам, который идеально подходит для создания стационарного бассейна. Тем более в такой чаше нет ни единого шва, что делает ее очень прочной. На выбор дается 2 цвета - белый и голубой. Гарантия на чаши в исполнении Liner составляет 15 лет.</p>
         </div>  
       </div>
       <div id="bestItems" class="tab-pane fade in">
-        <div class="article" style="margin:0;">
+        <div class="article">
             <h4>GLASS CRISTAL®</h4>
             <p>Прозрачный слой, созданный по новейшей технологии для создания непревзойденного глянцевого эффекта. Придаёт насыщенный зеркальный оттенок и глубину цвету. Надежно защищает от хим. реагентов, механического воздействия и ультрофиолетового излучения. Гарантия на чаши в исполнении Cristal - 30 лет.</p>
         
@@ -74,14 +74,14 @@ $fabrikaId = $page->getValue('fabrika');
     </div>
 
     <div id="linerDesc" style="display:none">
-      <div class="article" style="margin:0;">
+      <div class="article">
         <h2 style="margin-bottom: 60px;">Вариант исполнения LINER®</h2>
         <h4>FIBERGLASS POOL</h4>
         <p>Базовый вариант исполнения. Cмесь полиэфирной смолы, армирующих материалов и барьерный винилэфирный слой. Отличный состав по своим свойствам, который идеально подходит для создания стационарного бассейна. Тем более в такой чаше нет ни единого шва, что делает ее очень прочной. На выбор дается 2 цвета - белый и голубой. Гарантия на чаши в исполнении Liner составляет 15 лет.</p>
       </div> 
     </div>
     <div id="cristalDesc" style="display:none">
-      <div class="article" style="margin:0;">
+      <div class="article">
         <h2 style="margin-bottom: 60px;">Вариант исполнения CRISTAL®</h2>
         <h4>GLASS CRISTAL®</h4>
         <p>Прозрачный слой, созданный по новейшей технологии для создания непревзойденного глянцевого эффекта. Придаёт насыщенный зеркальный оттенок и глубину цвету. Надежно защищает от хим. реагентов, механического воздействия и ультрофиолетового излучения. Гарантия на чаши в исполнении Cristal - 30 лет.</p>
@@ -95,7 +95,7 @@ $fabrikaId = $page->getValue('fabrika');
     </div>
 
 
-    <div style="padding-top: 2.1rem;">
+    <div class="pt-2">
       <div class="simple-title articles__title">Технологии композитных бассейнов "Аквабиография"</div>
       <div class="services__list" style="margin-bottom: 0;">
         <div class="services__item toogles__item-title toogles__item-title--active" data-toogles="1">
