--- a/php/blocks/tabs/pavPrice.phtml
+++ b/php/blocks/tabs/pavPrice.phtml
@@ -4,7 +4,7 @@ $page = $variables['page'];
 $pavPrices = $this->vsk_objByType(258,['tovar',$page->id]);
 
 ?>
-<div class="article" style="margin:0">
+<div class="article">
     <table>
         <tr>
             <td>Ширина внутр.</td>
