--- a/php/blocks/tabs/price.phtml
+++ b/php/blocks/tabs/price.phtml
@@ -7,7 +7,7 @@ $currencyOld = $cf->getByCode('EUR');
 $currency = $cf->getByCode('RUR');
 
 ?>
-<div class="article" style="margin:0">
+<div class="article">
     <table>
         <tr>
             <td>Ширина внутр.</td>
