--- a/php/content/contacts/index.phtml
+++ b/php/content/contacts/index.phtml
@@ -4,12 +4,12 @@ $catalog = $this->getProductsListFromCategory($variables['pageId'],100);
 
 ?>
 
-<div class="center-wrap mobile--hide" style="padding-top: 2.1rem;">
+<div class="center-wrap mobile--hide pt-2">
     <h5>Контакты</h5>
 </div>
 
 <div class="contactStores center-wrap mobile--hide">
-    <div style="padding-top: 4em;">
+    <div class="pt-4">
         <strong class="contactStores__itemTitle">Санкт-Петербург</strong>
         <button class="btn btn--blue btn_showMap" data-city="spb">Показать карту</button>
         <div class="yandex_map" data-city="spb">
@@ -55,7 +55,7 @@ $catalog = $this->getProductsListFromCategory($variables['pageId'],100);
             
         </div> 
     </div>
-    <div style="padding-top: 4em;">
+    <div class="pt-4">
         <strong class="contactStores__itemTitle">Москва</strong>
         <button class="btn btn--blue btn_showMap" data-city="msc">Показать карту</button>
         <div class="yandex_map" data-city="msc">
@@ -92,7 +92,7 @@ $catalog = $this->getProductsListFromCategory($variables['pageId'],100);
     </div>
 </div>
 
-<div class="contactStores desktop--hide" style="padding-top: 2.1rem;">
+<div class="contactStores desktop--hide pt-2">
 <!--script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af5c67ada48c3ab4ef5360ebb79c24d1a5bcd4fded81cadbc1f3b3fe1b7d27156&amp;width=100%25&amp;height=451&amp;lang=ru_RU"></script-->
     <div class="contactStore__previews">
         <div class="center-wrap" style="margin-bottom: 2.1rem;">
