--- a/php/content/favorites/index.phtml
+++ b/php/content/favorites/index.phtml
@@ -30,7 +30,7 @@
             </div>
             <?php else: ?>
 
-            <div class="article" style="padding-top: 2.1rem;">
+            <div class="article pt-2">
                 <p>В избранном ничего нет</p>
             </div>
 
@@ -38,8 +38,8 @@
           </div>
         </section>
 
-<div class="center-wrap" style="padding-top: 2.1rem;">
-    <div class="article" style="padding-top: 2.1rem;">
+<div class="center-wrap pt-2">
+    <div class="article pt-2">
         <?=$page->getValue('content')?>
     </div>
 </div> 
