--- a/php/content/notfound.phtml
+++ b/php/content/notfound.phtml
@@ -2,12 +2,12 @@
     $page = $variables['page'];
 ?>
 
-<div class="center-wrap" style="padding-top: 2.1rem;">
+<div class="center-wrap pt-2">
 <div class="pool-filters__title"><?=$variables['header']?></div>
 </div>
 
-<div class="center-wrap" style="padding-top: 2.1rem;">
-    <div class="article" style="padding-top: 2.1rem;">
+<div class="center-wrap pt-2">
+    <div class="article pt-2">
         <a href="/">На главную</a>
     </div>
 </div> 
