--- a/php/content/pools/series.phtml
+++ b/php/content/pools/series.phtml
@@ -3,18 +3,18 @@ $page = $variables['page'];
 $catalog = $this->getProductsListFromCategory($variables['pageId'],100);
 
 ?>
-<div class="center-wrap" style="padding-top: 2.1rem;">
+<div class="center-wrap pt-2">
     <?= $this->render($variables, 'layout/header/titleWithBread') ?>
 </div>
 
-<div class="series-list" style="padding-top: 2.1rem;">
+<div class="series-list pt-2">
         <?php foreach($catalog['items'] as $category): ?>
             <?= $this->render($category, 'content/pools/series/preview') ?>
         <?php endforeach; ?>
 </div>
 
-<!--<div class="center-wrap" style="padding-top: 2.1rem;">
-    <div class="article" style="padding-top: 2.1rem;">
+<!--<div class="center-wrap pt-2">
+    <div class="article pt-2">
         <?=$page->getValue('content')?>
     </div>
 </div>-->
