--- a/php/emarket/compare/populated.phtml
+++ b/php/emarket/compare/populated.phtml
@@ -11,7 +11,7 @@ $productList = $this->getProductsForComparison($variables);
 $fieldDataList = $this->filterAllowedFieldData($variables['fields']);
 
 ?>
-<div class="center-wrap" style="padding-top: 2.1rem;">
+<div class="center-wrap pt-2">
 <div class="pool-filters__title"><?= $this->getCommonVar('header') ?></div>
 </div>
 <section class="cd-products-comparison-table"> 
