--- a/php/emarket/purchasing_one_step.phtml
+++ b/php/emarket/purchasing_one_step.phtml
@@ -20,11 +20,11 @@ $cart = $this->macros('emarket', 'cart');
 ?>
 
 
-<!-- <div class="center-wrap" style="padding-top: 2.1rem;">
+<!-- <div class="center-wrap pt-2">
 	<div class="pool-filters__title"><?= $this->translate('purchasing_one_step') ?></div>
 </div> -->
 
-<div class="center-wrap" style="padding-top: 2.1rem;">
+<div class="center-wrap pt-2">
     <div class="page__content page__content_mob-bgc_white">
         <div class="order">
             <a href="javascript:;" class="cart__show-list-trigger">Показать детали заказа</a>
