--- a/php/layout/menu/service.phtml
+++ b/php/layout/menu/service.phtml
@@ -39,7 +39,7 @@
                   </svg>Статьи</a></li>
               <li class="sidebar__nav-item"><a class="sidebar__nav-link" href="/videoblog/">
               <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="0 0 400.548 400.548" style="enable-background:new 0 0 400.548 400.548;" xml:space="preserve">
+	 viewBox="0 0 400.548 400.548" xml:space="preserve">
 <path d="M383.86,99.79c-10.104-4.184-21.731-1.873-29.466,5.86l-51.507,51.512v-31.397c0-22.359-18.13-40.491-40.493-40.491H40.493
 	C18.131,85.274,0,103.406,0,125.765v149.018c0,22.359,18.131,40.491,40.493,40.491h221.901c22.363,0,40.493-18.132,40.493-40.491
 	v-31.398l51.507,51.512c5.177,5.174,12.088,7.924,19.126,7.924c3.481,0,6.995-0.678,10.34-2.063
