--- a/php/search/search_do.phtml
+++ b/php/search/search_do.phtml
@@ -11,11 +11,11 @@ $dataProducts = $this->getSearchResultProducts();
 ?>
 
 
-<div class="center-wrap" style="padding-top: 2.1rem;">
+<div class="center-wrap pt-2">
 <div class="pool-filters__title">Найдено <?=umiCount($dataProducts['lines'])?> товаров и <?=umiCount($data['lines'])?> страниц</div>
 </div>
 
-<main class="center-wrap " style="padding-top: 2.1rem;">
+<main class="center-wrap pt-2">
 
         <section class="pool-filters">
 
