--- a/src/assets/css/blocks/article.scss
+++ b/src/assets/css/blocks/article.scss
@@ -2,9 +2,8 @@
     font-size: 16px;
     line-height: 141.4%;
     color: #777777;
-    margin: 0 auto 50px;
+    margin: 0 50px;
     max-width:700px;
-    margin: 0 auto;
     margin-bottom: 6rem;
 
     p, span, li, a {
