--- a/src/assets/css/blocks/breadcrumbs.scss
+++ b/src/assets/css/blocks/breadcrumbs.scss
@@ -96,3 +96,12 @@
         }
     }
 }
+
+.blog-header {
+    background-size: cover;
+}
+
+.blog-header__img {
+    width:100%;
+    margin-top:2rem;
+}
