--- a/php/blocks/tabs/options.phtml
+++ b/php/blocks/tabs/options.phtml
@@ -1,6 +1,6 @@
 <?php $check = '<svg height="512pt" viewBox="0 0 512 512" width="512pt" xmlns="http://www.w3.org/2000/svg"><path d="m369.164062 174.769531c7.8125 7.8125 7.8125 20.476563 0 28.285157l-134.171874 134.175781c-7.8125 7.808593-20.472657 7.808593-28.285157 0l-63.871093-63.875c-7.8125-7.808594-7.8125-20.472657 0-28.28125 7.808593-7.8125 20.472656-7.8125 28.28125 0l49.730468 49.730469 120.03125-120.035157c7.8125-7.808593 20.476563-7.808593 28.285156 0zm142.835938 81.230469c0 141.503906-114.515625 256-256 256-141.503906 0-256-114.515625-256-256 0-141.503906 114.515625-256 256-256 141.503906 0 256 114.515625 256 256zm-40 0c0-119.394531-96.621094-216-216-216-119.394531 0-216 96.621094-216 216 0 119.394531 96.621094 216 216 216 119.394531 0 216-96.621094 216-216zm0 0"/></svg>'; ?>
 
-<div class="options" style="display:flex;">
+<div class="options">
   <div>
     <h3>Самонесущий каркас Hard Rib®</h3>
     <div class="services__text">
@@ -14,11 +14,11 @@
     </div>
   </div>
   <div class="options__img">
-    <img src="https://tvoybasseyn.ru/images/content/abpool/hardrib.svg" style="margin-bottom:2.5rem;padding-right:35px">
+    <img src="https://tvoybasseyn.ru/images/content/abpool/hardrib.svg">
   </div>
 </div>
 
-<div class="options" style="display:flex;">
+<div class="options">
   <div>
     <h3>Утепление Thermopool®</h3>
     <div class="services__text">
@@ -30,11 +30,11 @@
     </div>
   </div>
   <div class="options__img">
-    <img src="https://tvoybasseyn.ru/images/content/abpool/thermopool.svg" style="margin-bottom:2.5rem;padding-right:35px">
+    <img src="https://tvoybasseyn.ru/images/content/abpool/thermopool.svg">
   </div>
 </div>
 
-<div class="options" style="display:flex;">
+<div class="options">
   <div>
     <h3>Система самоочистки AutoClean®</h3>
     <div class="services__text">
@@ -46,11 +46,11 @@
     </div>
   </div>
   <div class="options__img">
-    <img src="https://tvoybasseyn.ru/images/content/abpool/autoclean.svg" style="margin-bottom:2.5rem;padding-right:35px">
+    <img src="https://tvoybasseyn.ru/images/content/abpool/autoclean.svg">
   </div>
 </div>
 
-<div class="options" style="display:flex;">
+<div class="options">
   <div>
     <h3>Бордюрный камень Granit Stone®</h3>
     <div class="services__text">
@@ -62,30 +62,6 @@
     </div>
   </div>
   <div class="options__img">
-    <img src="https://tvoybasseyn.ru/images/content/abpool/bordur.svg" style="margin-bottom:2.5rem;padding-right:35px">
+    <img src="https://tvoybasseyn.ru/images/content/abpool/bordur.svg">
   </div>
 </div>
-
-<style>
-.options__img{
-  max-width: 260px;
-    width: 100%;
-}
-.options h3{
-  margin-bottom: 10px;
-    color: #000;
-    font-size: 21px;
-}
-  .options{
-    display:flex;
-    border-bottom: 1px solid #ccc;
-    margin-bottom: 53px;
-    padding-bottom: 20px;
-  }
-  .options svg{
-    max-width: 24px;
-    display: inline-block;
-    height: 21px;
-    margin-bottom: -4px;
-  }
-</style>
