--- a/php/catalog/blocks/best.phtml
+++ b/php/catalog/blocks/best.phtml
@@ -20,8 +20,8 @@
         <!-- <a class="best-offers__catalog mobile--hide" href="/">Весь каталог</a>  -->
     </div> 
     <?php $i = 1; foreach($cats as $key=>$cat): if(!$cat) continue;  ?>       
-        <div class="toogles__item <?=($i==1)?'toogles__item--active':''?>" data-toogles="<?=++$i?>">
-            <div class="toogles__item-content" <?=($i==2)?'style="display:block"':''?>>
+        <div class="toogles__item <?=($i==1)?'':''?>" data-toogles="<?=++$i?>">
+            <div class="toogles__item-content <?=($i==2)?'toogles__item-content-active':''?>">
                 <div>
                     <div class="best-offers__list mobile--hide">
                         <?php $j=0; foreach($cat as $product): ?>
