--- a/php/catalog/category.phtml
+++ b/php/catalog/category.phtml
@@ -147,10 +147,10 @@ $cart = $this->macros('emarket', 'cart');
               <?php foreach ($productList as $product): ?>
                 <?= $this->render(['product'=>$product,'compareList'=>$compareList,'cartItems'=>$cart['items']], 'catalog/product/preview/index') ?>
               <?php endforeach; ?>
-              <div class="card" style="opacity:0;padding: 0;margin: 0;"></div>
-              <div class="card" style="opacity:0;padding: 0;margin: 0;"></div>
-              <div class="card" style="opacity:0;padding: 0;margin: 0;"></div>
-              <div class="card" style="opacity:0;padding: 0;margin: 0;"></div>
+              <div class="card cart-invis"></div>
+              <div class="card cart-invis"></div>
+              <div class="card cart-invis"></div>
+              <div class="card cart-invis"></div>
             </div>
           </div>
         </section>
