--- a/php/content/default.phtml
+++ b/php/content/default.phtml
@@ -2,12 +2,12 @@
     $page = $variables['page'];
 ?>
 
-<div class="center-wrap" style="padding-top: 2.1rem;">
+<div class="center-wrap pt-2">
     <?= $this->render($variables, 'layout/header/titleWithBread') ?>
 </div>
 
-<div class="center-wrap" style="padding-top: 2.1rem;">
-    <div class="article" style="padding-top: 2.1rem;">
+<div class="center-wrap pt-2">
+    <div class="article pt-2">
         <?=$page->getValue('content')?>
     </div>
 </div> 
