--- a/php/content/gallery/index.phtml
+++ b/php/content/gallery/index.phtml
@@ -2,7 +2,7 @@
     $page = $variables['page'];
 ?>
 
-<div class="center-wrap" style="padding-top: 2.1rem;">
+<div class="center-wrap pt-2">
     <div class="pool-filters__title"><?= $this->escape($variables['header']) ?></div>
     <?= $this->render($variables, 'layout/header/breadcrumbs') ?>
     
