--- a/php/content/himiya.phtml
+++ b/php/content/himiya.phtml
@@ -4,11 +4,11 @@ $catalog = $this->getProductsListFromCategory($variables['pageId'], 100);
 
 ?>
 
-<div class="center-wrap" style="padding-top: 2.1rem;">
+<div class="center-wrap pt-2">
   <?= $this->render($variables, 'layout/header/titleWithBread') ?>
 </div>
 
-<div class="center-wrap" style="padding-top: 2.1rem;">
+<div class="center-wrap pt-2">
   <div class="catalog-list">
     <?php foreach ($catalog['items'] as $category) : ?>
       <div class="blog-main__section">
@@ -20,7 +20,7 @@ $catalog = $this->getProductsListFromCategory($variables['pageId'], 100);
 </div>
 
 
-<div class="center-wrap" style="padding-top: 2.1rem;">
+<div class="center-wrap pt-2">
   <div class="article">
     <?= $page->getValue('content') ?>
   </div>
