--- a/php/content/pools/configurator/index.phtml
+++ b/php/content/pools/configurator/index.phtml
@@ -52,11 +52,11 @@ foreach($modelsArr as $category){
 }
 ?>
 
-<div class="center-wrap" style="padding-top: 2.1rem;">
+<div class="center-wrap pt-2">
     <?= $this->render($variables, 'layout/header/titleWithBread') ?>
 </div>
 
-<div class="center-wrap" style="padding-top: 2.1rem;">
+<div class="center-wrap pt-2">
     <div class="configurator">
         <script>
             window.json = <?=json_encode($json)?>;
