--- a/php/emarket/cart/product/index.phtml
+++ b/php/emarket/cart/product/index.phtml
@@ -20,7 +20,7 @@ $product = $variables;
         <p class="cart__list__text__name"><?= $product['name'] ?></p>
 
         <div style="display: flex;justify-content: space-between;align-items: center;">
-            <div class="product__quantity" style="<?= $quantityStyle ?>">
+            <div class="product__quantity product__quantity-active">
                 <div class="quantity"><span class="quantity__down change_product_quantity">
                         <svg width="12" height="2" viewBox="0 0 12 2" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M0.503418 1.33307H11.498C11.7742 1.33307 11.998 1.10921 11.998 0.833069C11.998 0.556927 11.7742 0.333069 11.498 0.333069H0.503418C0.227276 0.333069 0.00341797 0.556927 0.00341797 0.833069C0.00341797 1.10921 0.227276 1.33307 0.503418 1.33307Z"></path>
