--- a/php/layout/head.phtml
+++ b/php/layout/head.phtml
@@ -19,6 +19,8 @@
 <script type="text/javascript" src="/ulang/<?= $variables['lang'] ?>/common/emarket/?js" charset="utf-8"></script>
 <script src="compiled/demomarket.lib-min.js"></script>
 <script src="compiled/demomarket-min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.min.js" type="text/javascript"></script>
+
 
 <?php if ($variables['domain-id'] == 2):?>
     <!-- Google Tag Manager -->
