--- a/php/layout/header/currencySelector.phtml
+++ b/php/layout/header/currencySelector.phtml
@@ -12,7 +12,7 @@ if(!$currency_slected){
 <form class="currency" method="post" action="/emarket/selectCurrency/">	
     <?php foreach($currency['items'] as $item){  ?>
 
-        <div class="header__price selectCurrency " <?=($currency_slected!=$item['id'])?'style="display:none"':''?>>
+        <div class="header__price selectCurrency <?=($currency_slected!=$item['id'])?'hidden':''?> ">
             <?=$item['name']?>
         </div>
         <?php
@@ -23,11 +23,3 @@ if(!$currency_slected){
     <?php } ?>
     <input type="hidden" name="currency-codename" value="<?=$codename?>">
 </form> 
-
-<style>
-    .header__price{
-        font-size: 1.4rem;
-        color: #c3c3c3;
-        font-weight: 400;
-    }
-</style>
