--- a/php/news/item/content.phtml
+++ b/php/news/item/content.phtml
@@ -10,12 +10,12 @@
 $newsItem = $variables['page'];
 ?>
    
-<div class="center-wrap" style="padding-top: 2.1rem;">
+<div class="center-wrap pt-2">
     <?= $this->render($variables, 'layout/header/titleWithBread') ?>
 </div>
 
-<div class="center-wrap" style="padding-top: 2.1rem;">
-    <div class="article" style="padding-top: 2.1rem;">
+<div class="center-wrap pt-2">
+    <div class="article pt-2">
         <?=$newsItem->getValue('content')?>
     </div>
 </div>
