--- a/src/assets/css/blocks/sections/product.scss
+++ b/src/assets/css/blocks/sections/product.scss
@@ -367,6 +367,10 @@
     &__quantity {
         max-width: 12.7rem;
         margin-right: 1.5rem;
+        display: none;
+        &-active {
+            display: block;
+        }
 
         @media screen and (max-width:$large_tablet) {
             margin-right: 3.2rem;
@@ -550,6 +554,9 @@
                 height: 100%;
                 object-fit: cover;
             }
+        }
+        img {
+            object-fit: contain;
         }
     }
 
@@ -910,6 +917,10 @@
     font-weight: 600;
 }
 
+.product__series {
+    margin-bottom: 60px;
+}
+
 .product__series-headline {
     font-size: 32px;
     margin-bottom: 40px;
@@ -930,6 +941,9 @@
     }
     &:last-child {
         margin-right: 0;
+    }
+    :hover {
+        color: #3b3b3b;
     }
 }
 
@@ -955,3 +969,46 @@
         display: block;
     }
 }
+
+.product__colors{
+    display:flex;
+    flex-wrap: wrap;
+}
+
+.product__colors.product__colors--col3 a,.product__colors.product__colors--col3 svg{
+    max-width: 33%;
+    padding: 30px;
+}
+
+@media screen and (max-width:768px){
+    .product__colors.product__colors--col3 a,.product__colors.product__colors--col3 svg{
+        padding: 6px;
+    }
+
+}
+
+.options__img{
+    max-width: 260px;
+    width: 100%;
+    img {
+        margin-bottom:2.5rem;
+        padding-right:35px;
+    }
+  }
+  .options h3{
+    margin-bottom: 10px;
+      color: #000;
+      font-size: 21px;
+  }
+    .options{
+      display:flex;
+      border-bottom: 1px solid #ccc;
+      margin-bottom: 53px;
+      padding-bottom: 20px;
+    }
+    .options svg{
+      max-width: 24px;
+      display: inline-block;
+      height: 21px;
+      margin-bottom: -4px;
+    }
