--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -205,3 +205,17 @@ h5 {
   margin-right: 0;
   text-align: center;
 }
+
+.pt-0 {
+  padding-top: 0px;
+}
+.pt-2 {
+  padding-top: 2.1rem;
+}
+
+.pt-4 {
+  padding-top: 4em;
+}
+.pt-6 {
+  padding-top: 6rem;
+}
