--- a/src/assets/css/blocks/search.scss
+++ b/src/assets/css/blocks/search.scss
@@ -13,6 +13,10 @@
         color: #AAAAAA;
         border: none;
         width: 100%;
+        @media screen and (max-width: 1024px){
+            width: 100px;
+            font-size: 1.2rem;
+        }
     }
 
     .btn {
